--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,7 +2,7 @@
 # ~~~~~
 
 # Force.com User Secret
-canvas.consumer.secret = 7555928331729921474 
+canvas.consumer.secret = XXXXXXXXXXXX 
 
 # Secret key
 # ~~~~~
